--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+@property --sine-progress {
+    initial-value: 0;
+    inherits: false;
+    syntax: "<number>";
+}
+
 body {
     font-family: "Tolman";
     font-size: 18pt;
@@ -6,9 +12,22 @@ body {
 
 div[name="header"] {
     width: 100%;
-    margin-top:20px;
-    box-shadow: 0px -30px 20px 60px rgb(172, 41, 113);
+    margin-top:10px;
+    box-shadow: 0px 0px 20px 20px rgb(172, 41, 113);
     font-weight:bolder;
+    translate: 0 0;
+}
+
+.mimosaspin {
+    width: 48px;
+    animation: rotate 3s infinite linear;
+    align-content: center;
+}
+
+.lettershake {
+    display: inline-block;
+    animation: bounce 2s infinite linear;
+    translate: calc(cos(var(--sine-progress)*3.1415*2) * 5px) calc(sin(var(--sine-progress)*3.1415*2) * 10px - 20px);
 }
 
 @keyframes rainbow {
@@ -20,13 +39,22 @@ div[name="header"] {
     100% {color: #E15353;}
 }
 
+@keyframes bounce {
+    from {
+        --sine-progress: 0;
+    }
+    to {
+        --sine-progress: 1;
+    }
+}
+
 @keyframes rotate {
     0% {transform: rotate3d(0,1,0,0)}
     100% {transform: rotate3d(0,1,0,360deg)}
 }
 
 .main {
-    margin-top: 50px;
+    margin-top: 30px;
     padding-left: 5%;
     padding-right: 5%;
     padding-bottom: 5%;
@@ -38,13 +66,13 @@ div[name="header"] {
 
 header {
     text-align: center;
-    color:blue;
-    animation-name: rainbow;
+    color:#F3CD4C;
+    
     animation-duration: 10s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     background-color: rgb(172, 41, 113);
-    text-decoration-line:underline;
+
     font-weight:bolder;
     padding:5px;
 }
