--- a/aceto.css
+++ b/aceto.css
@@ -2,16 +2,11 @@ html {
     background-image: url("arrow heart.png");
     background-repeat: repeat;
     background-size: 10%;
-    height: 100%;
-}
-
-.fullheight {
-    height: 100%;
 }
 
 h1 {
     text-align: center;
-    font-family: "Vigofam";
+    font-family: "Kristal";
     font-size: 40pt;
     color: #DBB030;
 }
@@ -74,19 +69,16 @@ div[name="text"]{
     color: white;
     text-align: left;
     font-size: 14pt;
+    white-space: pre-line;
 }
 
 div[name="computer"] {
     font-family: "Terminal F4";
     color: limegreen;
-    background-color: black;
+    background-color: rgb(31, 31, 31);
     padding: 40px 40px 40px 40px;
-    box-shadow: 0 0 20px 5px lightgrey;
-}
-
-br {
-    display: block;
-    margin: 10px;
+    text-shadow: 0px 0px 5px #000000;
+    box-shadow: 0 0 100px 5px rgb(7, 7, 7) inset, 0 0 20px 5px white;
 }
 
 .date {
@@ -141,6 +133,11 @@ a {
 
 a:hover {
     color: rgb(216, 139, 164);
+}
+
+@font-face {
+    font-family: "Kristal";
+    src: url("Kristal.ttf");
 }
 
 @font-face {
