--- a/drones.css
+++ b/drones.css
@@ -64,6 +64,20 @@ h6 {
     font-style: italic;
 }
 
+summary {
+    background: repeating-linear-gradient(
+    33deg,
+    #1d1d1d88,
+    #1d1d1d88 25px,
+    #b9a02588 25px,
+    #b9a02588 50px
+    );
+
+    padding: 10px;
+    font-family: "Terminal F4";
+    font-size: 24pt;
+}
+
 div[name="chapter"]{
     font-family: "MonospaceTypewriter";
     margin: 0%;
@@ -84,11 +98,15 @@ span {
 span[name="N"] {
     color: #b7b7b7;
     text-shadow: 0 0 3px rgba(126, 126, 126, 0.73);
+    font-family: "LiberationSerifBold";
+    font-size: 15pt;
 }
 
 span[name="Cyn"] {
     color: #dcbb16;
     text-shadow: 0 0 3px rgba(179, 196, 0, 0.73);
+    font-family: "Cascadia";
+    font-size: 13.5pt;
 }
 
 span[name="Tessa"] {
@@ -99,16 +117,16 @@ span[name="Tessa"] {
 }
 
 span[name="J"] {
-    color:#d24b4b;
-    text-shadow: 0 0 3px rgba(162, 49, 0, 0.73);
+    color:#ff3838;
+    text-shadow: 0 0 3px rgba(85, 25, 0, 0.644);
     font-family: "JosefinBold";
     font-size: 16pt;
 }
 
 span[name="mother"]{
-    color:rgb(225, 0, 0);
+    color:rgb(0, 0, 0);
     font-weight: bold;
-    text-shadow: 0 0 5px black;
+    text-shadow: 0 0 3px rgb(255, 255, 255);
 }
 
 span[name="SOLVER"]{
@@ -208,4 +226,14 @@ a:hover {
 @font-face {
     font-family: "JosefinBold";
     src: url("JosefinSlab-Bold.ttf");
+}
+
+@font-face {
+    font-family: "Cascadia";
+    src: url("Cascadia.ttf")
+}
+
+@font-face {
+    font-family: "LiberationSerifBold";
+    src: url("LiberationSerif-Bold.ttf");
 }
